NewArchive/5baf5fb2fe85e599c813cfb8bf5581cd-db5d19e1eef2156043aca9a1886f1980/output
g++-4.8: error: -E or -x required when input is from standard input
main.cpp: In function 'int main()':
main.cpp:9:17: error: inconsistent deduction for 'auto': 'int' and then 'const char*'
     auto i=5, t="text";
                 ^
main.cpp:10:21: error: 'text' was not declared in this scope
     cout << i<<" "<<text << endl;
                     ^
